--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -46,20 +46,12 @@
         android:layout_centerVertical="true">
 
         <Button
-            android:id="@+id/btnSignin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="@string/login.message.signin"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"/>
-
-        <Button
             android:id="@+id/btnSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
             android:shadowColor="@color/colorPrimary"
-            android:text="@string/login.message.signup"
+            android:text="@string/signup.message.signup"
             android:textColor="@color/colorPrimary"/>
     </LinearLayout>
 
