--- a/app/src/main/res/layout/activity_add_appointment.xml
+++ b/app/src/main/res/layout/activity_add_appointment.xml
@@ -61,19 +61,56 @@
             android:inputType="date"/>
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/wrapperAddress"
+    <LinearLayout
+        android:id="@+id/layoutAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wrapperTime"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/txtAddress"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/wrapperAddress"
+            android:layout_width="@dimen/address_width"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/txtAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/addappointment.message.address"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <ImageButton
+            android:id="@+id/btnSearchMap"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/addappointment.message.address"/>
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="match_parent"
+            android:background="#00ffffff"
+            android:baselineAlignBottom="true"
+            android:src="@android:drawable/ic_menu_mylocation"
+            android:textColor="@android:color/holo_red_light"
+            android:tint="@android:color/holo_red_light"/>
+    </LinearLayout>
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/addAppointmentMap"
+              android:name="com.google.android.gms.maps.SupportMapFragment"
+              android:layout_width="@dimen/maps_width"
+              android:layout_height="@dimen/maps_height"
+              android:layout_below="@id/layoutAddress"
+              android:layout_centerHorizontal="true"
+              android:layout_margin="@dimen/activity_horizontal_margin"/>
+    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:id="@+id/addAppointmentMap"-->
+    <!--class="com.google.android.gms.maps.SupportMapFragment"-->
+    <!--android:layout_width="@dimen/maps_width"-->
+    <!--android:layout_height="@dimen/maps_height"-->
+    <!--android:layout_below="@id/layoutAddress"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_margin="@dimen/activity_horizontal_margin"/>-->
 
     <LinearLayout
         android:id="@+id/layoutButtons"
@@ -87,6 +124,7 @@
             android:id="@+id/btnAccept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             android:backgroundTint="@color/colorPrimary"
             android:text="@string/addappointment.message.accept"
             android:textColor="@color/common_google_signin_btn_text_dark_default"/>
