--- a/app/src/main/res/layout/content_appointment.xml
+++ b/app/src/main/res/layout/content_appointment.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
 
         <TextView
@@ -29,32 +29,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"/>
     </LinearLayout>
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapview"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@+id/layoutPatient"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:layout_weight="1"/>
-
-    <!--<FrameLayout-->
-    <!--android:id="@+id/mapFrameContainer"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/layoutPatient"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:layout_margin="@dimen/activity_horizontal_margin">-->
-
-
-    <!--<View xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:id="@+id/map"-->
-    <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="center_horizontal"/>-->
-
-    <!--</FrameLayout>-->
 
     <LinearLayout
         android:id="@+id/layoutButtons"
@@ -69,18 +43,22 @@
             android:id="@+id/imgEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
             android:background="@color/colorPrimaryDark"
             android:backgroundTint="@color/colorPrimaryDark"
             android:src="@android:drawable/ic_menu_edit"
-            android:tint="@color/common_google_signin_btn_text_dark_default"/>
+            android:textColor="@android:color/white"
+            android:tint="@android:color/white"/>
 
         <ImageButton
             android:id="@+id/imgDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
             android:background="@color/colorAccent"
             android:backgroundTint="@color/colorAccent"
             android:src="@android:drawable/ic_menu_delete"
+            android:textColor="@android:color/white"
             android:tint="@android:color/white"/>
 
     </LinearLayout>
