--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="maps_height">200dp</dimen>
     <dimen name="maps_width">200dp</dimen>
     <dimen name="address_width">300dp</dimen>
+    <dimen name="address_font_size">10dp</dimen>
 </resources>
