--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="maps_width">200dp</dimen>
     <dimen name="address_width">300dp</dimen>
     <dimen name="address_font_size">10dp</dimen>
+    <dimen name="appointment_container_map_width">100dp</dimen>
+    <dimen name="appointment_container_map_height">100dp</dimen>
 </resources>
