--- a/app/src/main/res/layout/content_appointment.xml
+++ b/app/src/main/res/layout/content_appointment.xml
@@ -65,8 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:background="@color/colorAccent"
-            android:backgroundTint="@color/colorAccent"
+            android:background="@android:color/holo_red_light"
+            android:backgroundTint="@android:color/holo_red_light"
             android:src="@android:drawable/ic_menu_delete"
             android:textColor="@android:color/white"
             android:tint="@android:color/white"/>
