Commented all imgaleloader code. Minor changes in content_appointment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="appointment_container_map_height">100dp</dimen>
     <dimen name="static_maps_width">100dp</dimen>
     <dimen name="static_maps_height">100dp</dimen>
+    <dimen name="appointments_item_margin">8dp</dimen>
 </resources>
