--- a/app/src/main/res/layout/content_appointment.xml
+++ b/app/src/main/res/layout/content_appointment.xml
@@ -1,88 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/appointments_item_margin"
-                android:background="@android:color/background_light"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+
     >
 
-    <LinearLayout
-        android:id="@+id/layoutPatient"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/layoutPatient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtHour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+            <TextView
+                android:id="@+id/txtPatient"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/patient_margin"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/txtHour"
+            android:id="@+id/txtAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutPatient"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/patient_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <ImageView
+            android:id="@+id/staticMapImg"
+            android:layout_width="@dimen/static_maps_width"
+            android:layout_height="@dimen/static_maps_height"
+            android:layout_below="@id/txtAddress"
+            android:layout_centerHorizontal="true"
+            android:src="@android:drawable/alert_light_frame"/>
+
+        <LinearLayout
+            android:id="@+id/layoutButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-        <TextView
-            android:id="@+id/txtPatient"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/patient_margin"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/txtAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/layoutPatient"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/patient_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:textAppearance="?android:attr/textAppearanceSmall"/>
-
-    <ImageView
-        android:id="@+id/staticMapImg"
-        android:layout_width="@dimen/static_maps_width"
-        android:layout_height="@dimen/static_maps_height"
-        android:layout_below="@id/txtAddress"
-        android:layout_centerHorizontal="true"
-        android:src="@android:drawable/alert_light_frame"/>
-
-    <LinearLayout
-        android:id="@+id/layoutButtons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/staticMapImg"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal">
+            android:layout_below="@+id/staticMapImg"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal">
 
 
-        <ImageButton
-            android:id="@+id/imgEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:background="@color/colorPrimaryDark"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:src="@android:drawable/ic_menu_edit"
-            android:textColor="@android:color/white"
-            android:tint="@android:color/white"/>
+            <ImageButton
+                android:id="@+id/imgEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                android:background="@color/colorPrimaryDark"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:src="@android:drawable/ic_menu_edit"
+                android:textColor="@android:color/white"
+                android:tint="@android:color/white"/>
 
-        <ImageButton
-            android:id="@+id/imgDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:background="@android:color/holo_red_light"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:src="@android:drawable/ic_menu_delete"
-            android:textColor="@android:color/white"
-            android:tint="@android:color/white"/>
+            <ImageButton
+                android:id="@+id/imgDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                android:background="@android:color/holo_red_light"
+                android:backgroundTint="@android:color/holo_red_light"
+                android:src="@android:drawable/ic_menu_delete"
+                android:textColor="@android:color/white"
+                android:tint="@android:color/white"/>
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
