Hide card view if not address added.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="static_maps_width">100dp</dimen>
     <dimen name="static_maps_height">100dp</dimen>
     <dimen name="appointments_item_margin">8dp</dimen>
+    <dimen name="buttons_Padding">2dp</dimen>
 </resources>
