--- a/app/src/main/res/layout/content_appointment.xml
+++ b/app/src/main/res/layout/content_appointment.xml
@@ -106,7 +106,17 @@
 
             </LinearLayout>
 
+
         </android.support.v7.widget.CardView>
+
+        <ProgressBar
+            android:id="@+id/mapProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toRightOf="@+id/layoutButtons"
+            android:visibility="gone"/>
 
 
     </RelativeLayout>
