Added logo to application and login activity.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,11 +10,41 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".login.ui.LoginActivity">
 
+    <LinearLayout
+        android:id="@+id/logoLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:padding="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/logoNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="@string/app_name"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/logoTextSize"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/logoImg"
+            android:layout_width="@dimen/logoWidth"
+            android:layout_height="@dimen/logoWidth"
+            android:baselineAlignBottom="true"
+            android:src="@drawable/logo"/>
+    </LinearLayout>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/wrapperEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/wrapperPassword">
+        android:layout_below="@id/logoLayout">
 
         <EditText
             android:id="@+id/editTxtEmail"
@@ -28,7 +58,7 @@
         android:id="@+id/wrapperPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/layoutButtons">
+        android:layout_below="@+id/wrapperEmail">
 
         <EditText
             android:id="@+id/editTxtPassword"
@@ -42,8 +72,8 @@
         android:id="@+id/layoutButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:layout_below="@id/wrapperPassword"
+        android:layout_centerHorizontal="true">
 
         <Button
             android:id="@+id/btnSignin"
